@@ -1,6 +1,6 @@
 package local.uniclog.mainframe.dao.teamspeak.service.impl;
 
-import local.uniclog.mainframe.dao.teamspeak.dto.TeamspeakUserEntityDataTransferObject;
+import local.uniclog.mainframe.dao.teamspeak.dto.TeamspeakUserEntityDto;
 import local.uniclog.mainframe.dao.teamspeak.service.TeamspeakUserEntityDataAccessService;
 import local.uniclog.mainframe.dao.teamspeak.service.TeamspeakUserEntityDataService;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 
 /**
  * Реализация сервиса {@link TeamspeakUserEntityDataAccessService}
@@ -24,8 +23,8 @@ public class TeamspeakUserEntityDataAccessServiceImpl implements TeamspeakUserEn
     public final TeamspeakUserEntityDataService service;
 
     @Override
-    public <T> TeamspeakUserEntityDataTransferObject save(T object) {
-        if (object instanceof TeamspeakUserEntityDataTransferObject entityDto) {
+    public <T> TeamspeakUserEntityDto save(T object) {
+        if (object instanceof TeamspeakUserEntityDto entityDto) {
             var entity = service.convertFromDataTransferObject(entityDto);
             entity = service.save(entity);
             return service.convertToDataTransferObject(entity);
@@ -34,8 +33,8 @@ public class TeamspeakUserEntityDataAccessServiceImpl implements TeamspeakUserEn
     }
 
     @Override
-    public <T> TeamspeakUserEntityDataTransferObject update(T object) {
-        if (object instanceof TeamspeakUserEntityDataTransferObject entityDto) {
+    public <T> TeamspeakUserEntityDto update(T object) {
+        if (object instanceof TeamspeakUserEntityDto entityDto) {
             var entity = service.convertFromDataTransferObject(entityDto);
             entity = service.update(entity);
             return service.convertToDataTransferObject(entity);
@@ -44,32 +43,32 @@ public class TeamspeakUserEntityDataAccessServiceImpl implements TeamspeakUserEn
     }
 
     @Override
-    public TeamspeakUserEntityDataTransferObject findByTeamspeakToken(String token) {
+    public TeamspeakUserEntityDto findByTeamspeakToken(String token) {
         var entity = service.findByTeamspeakToken(token);
         return (entity == null) ? null : service.convertToDataTransferObject(entity);
     }
 
     @Override
-    public List<TeamspeakUserEntityDataTransferObject> findAllSubscribers() {
+    public List<TeamspeakUserEntityDto> findAllSubscribers() {
         var entities = service.findAllSubscribers();
         return (entities.isEmpty()) ? emptyList() : entities.stream()
                 .map(service::convertToDataTransferObject)
-                .collect(toList());
+                .toList();
     }
 
     @Override
-    public List<TeamspeakUserEntityDataTransferObject> findAll() {
+    public List<TeamspeakUserEntityDto> findAll() {
         var entities = service.findAll();
         return (entities.isEmpty()) ? emptyList() : entities.stream()
                 .map(service::convertToDataTransferObject)
-                .collect(toList());
+                .toList();
     }
 
     @Override
-    public List<TeamspeakUserEntityDataTransferObject> deleteByTeamspeakToken(String token) {
+    public List<TeamspeakUserEntityDto> deleteByTeamspeakToken(String token) {
         var entities = service.deleteByTeamspeakToken(token);
         return (entities.isEmpty()) ? emptyList() : entities.stream()
                 .map(service::convertToDataTransferObject)
-                .collect(toList());
+                .toList();
     }
 }
