@@ -1,6 +1,6 @@
 package local.uniclog.mainframe.dao.telegram.service.impl;
 
-import local.uniclog.mainframe.dao.telegram.dto.TelegramMyFitnessUserEntityDataTransferObject;
+import local.uniclog.mainframe.dao.telegram.dto.TelegramMyFitnessUserEntityDto;
 import local.uniclog.mainframe.dao.telegram.service.TelegramMyFitnessUserEntityDataAccessService;
 import local.uniclog.mainframe.dao.telegram.service.TelegramMyFitnessUserEntityDataService;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 
 /**
  * Реализация сервиса {@link TelegramMyFitnessUserEntityDataAccessService}
@@ -24,8 +23,8 @@ public class TelegramMyFitnessUserEntityDataAccessServiceImpl implements Telegra
     public final TelegramMyFitnessUserEntityDataService service;
 
     @Override
-    public <T> TelegramMyFitnessUserEntityDataTransferObject save(T object) {
-        if (object instanceof TelegramMyFitnessUserEntityDataTransferObject entityDto) {
+    public <T> TelegramMyFitnessUserEntityDto save(T object) {
+        if (object instanceof TelegramMyFitnessUserEntityDto entityDto) {
             var entity = service.convertFromDataTransferObject(entityDto);
             entity = service.save(entity);
             return service.convertToDataTransferObject(entity);
@@ -34,8 +33,8 @@ public class TelegramMyFitnessUserEntityDataAccessServiceImpl implements Telegra
     }
 
     @Override
-    public <T> TelegramMyFitnessUserEntityDataTransferObject update(T object) {
-        if (object instanceof TelegramMyFitnessUserEntityDataTransferObject entityDto) {
+    public <T> TelegramMyFitnessUserEntityDto update(T object) {
+        if (object instanceof TelegramMyFitnessUserEntityDto entityDto) {
             var entity = service.convertFromDataTransferObject(entityDto);
             entity = service.update(entity);
             return service.convertToDataTransferObject(entity);
@@ -44,32 +43,32 @@ public class TelegramMyFitnessUserEntityDataAccessServiceImpl implements Telegra
     }
 
     @Override
-    public TelegramMyFitnessUserEntityDataTransferObject findByUserTelegramId(Long userTelegramId) {
+    public TelegramMyFitnessUserEntityDto findByUserTelegramId(Long userTelegramId) {
         var entity = service.findByUserTelegramId(userTelegramId);
         return (entity == null) ? null : service.convertToDataTransferObject(entity);
     }
 
     @Override
-    public List<TelegramMyFitnessUserEntityDataTransferObject> findAllSubscribers() {
+    public List<TelegramMyFitnessUserEntityDto> findAllSubscribers() {
         var entities = service.findAllSubscribers();
         return (entities.isEmpty()) ? emptyList() : entities.stream()
                 .map(service::convertToDataTransferObject)
-                .collect(toList());
+                .toList();
     }
 
     @Override
-    public List<TelegramMyFitnessUserEntityDataTransferObject> findAll() {
+    public List<TelegramMyFitnessUserEntityDto> findAll() {
         var entities = service.findAll();
         return (entities.isEmpty()) ? emptyList() : entities.stream()
                 .map(service::convertToDataTransferObject)
-                .collect(toList());
+                .toList();
     }
 
     @Override
-    public List<TelegramMyFitnessUserEntityDataTransferObject> deleteAllByUserTelegramId(Long id) {
+    public List<TelegramMyFitnessUserEntityDto> deleteAllByUserTelegramId(Long id) {
         var entities = service.deleteAllByUserTelegramId(id);
         return (entities.isEmpty()) ? emptyList() : entities.stream()
                 .map(service::convertToDataTransferObject)
-                .collect(toList());
+                .toList();
     }
 }
