@@ -1,6 +1,6 @@
 package local.uniclog.mainframe.dao.telegram.service.impl;
 
-import local.uniclog.mainframe.dao.telegram.dto.TelegramUnicBotCoreUserEntityDataTransferObject;
+import local.uniclog.mainframe.dao.telegram.dto.TelegramUnicBotCoreUserEntityDto;
 import local.uniclog.mainframe.dao.telegram.service.TelegramUnicBotCoreUserEntityDataAccessService;
 import local.uniclog.mainframe.dao.telegram.service.TelegramUnicBotCoreUserEntityDataService;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 
 /**
  * Реализация сервиса {@link TelegramUnicBotCoreUserEntityDataAccessService}
@@ -24,8 +23,8 @@ public class TelegramUnicBotCoreUserEntityDataAccessServiceImpl implements Teleg
     public final TelegramUnicBotCoreUserEntityDataService service;
 
     @Override
-    public <T> TelegramUnicBotCoreUserEntityDataTransferObject save(T object) {
-        if (object instanceof TelegramUnicBotCoreUserEntityDataTransferObject entityDto) {
+    public <T> TelegramUnicBotCoreUserEntityDto save(T object) {
+        if (object instanceof TelegramUnicBotCoreUserEntityDto entityDto) {
             var entity = service.convertFromDataTransferObject(entityDto);
             entity = service.save(entity);
             return service.convertToDataTransferObject(entity);
@@ -34,8 +33,8 @@ public class TelegramUnicBotCoreUserEntityDataAccessServiceImpl implements Teleg
     }
 
     @Override
-    public <T> TelegramUnicBotCoreUserEntityDataTransferObject update(T object) {
-        if (object instanceof TelegramUnicBotCoreUserEntityDataTransferObject entityDto) {
+    public <T> TelegramUnicBotCoreUserEntityDto update(T object) {
+        if (object instanceof TelegramUnicBotCoreUserEntityDto entityDto) {
             var entity = service.convertFromDataTransferObject(entityDto);
             entity = service.update(entity);
             return service.convertToDataTransferObject(entity);
@@ -44,32 +43,32 @@ public class TelegramUnicBotCoreUserEntityDataAccessServiceImpl implements Teleg
     }
 
     @Override
-    public TelegramUnicBotCoreUserEntityDataTransferObject findByUserTelegramId(Long userTelegramId) {
+    public TelegramUnicBotCoreUserEntityDto findByUserTelegramId(Long userTelegramId) {
         var entity = service.findByUserTelegramId(userTelegramId);
         return (entity == null) ? null : service.convertToDataTransferObject(entity);
     }
 
     @Override
-    public List<TelegramUnicBotCoreUserEntityDataTransferObject> findAllSubscribers() {
+    public List<TelegramUnicBotCoreUserEntityDto> findAllSubscribers() {
         var entities = service.findAllSubscribers();
         return (entities.isEmpty()) ? emptyList() : entities.stream()
                 .map(service::convertToDataTransferObject)
-                .collect(toList());
+                .toList();
     }
 
     @Override
-    public List<TelegramUnicBotCoreUserEntityDataTransferObject> findAll() {
+    public List<TelegramUnicBotCoreUserEntityDto> findAll() {
         var entities = service.findAll();
         return (entities.isEmpty()) ? emptyList() : entities.stream()
                 .map(service::convertToDataTransferObject)
-                .collect(toList());
+                .toList();
     }
 
     @Override
-    public List<TelegramUnicBotCoreUserEntityDataTransferObject> deleteAllByUserTelegramId(Long id) {
+    public List<TelegramUnicBotCoreUserEntityDto> deleteAllByUserTelegramId(Long id) {
         var entities = service.deleteAllByUserTelegramId(id);
         return (entities.isEmpty()) ? emptyList() : entities.stream()
                 .map(service::convertToDataTransferObject)
-                .collect(toList());
+                .toList();
     }
 }
